// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user mutations with world create wiki no permission 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Authentication is required for this action],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`user mutations with world delete wiki no permission 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: You do not have permission to write to this page],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`user mutations with world update cover image no permission 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: You do not have permission to write to this page],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`user mutations with world update place no permission 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: You do not have permission to write to this page],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`user mutations with world update wiki no permission 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: You do not have permission to write to this page],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`user mutations with world with authenticated user create wiki 1`] = `
Object {
  "data": Object {
    "createWiki": Object {
      "_id": Any<String>,
      "folders": ArrayContaining [
        ObjectContaining {
          "_id": Any<String>,
          "pages": ArrayContaining [
            ObjectContaining {
              "_id": Any<String>,
            },
          ],
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`user mutations with world with authenticated user delete wiki 1`] = `
Object {
  "data": Object {
    "deleteWiki": Object {
      "_id": Any<String>,
      "folders": ArrayContaining [
        ObjectContaining {
          "_id": Any<String>,
          "children": ArrayContaining [
            ObjectContaining {
              "_id": Any<String>,
            },
          ],
          "pages": Array [],
        },
        ObjectContaining {
          "_id": Any<String>,
          "children": Array [],
          "pages": ArrayContaining [
            ObjectContaining {
              "_id": Any<String>,
            },
          ],
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`user mutations with world with authenticated user delete wiki root wiki 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: You cannot delete the main page of a world],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`user mutations with world with authenticated user update cover image 1`] = `
Object {
  "data": Object {
    "updateWiki": Object {
      "_id": Any<String>,
      "canWrite": true,
      "content": null,
      "coverImage": Object {
        "_id": Any<String>,
        "chunks": ArrayContaining [
          ObjectContaining {
            "_id": Any<String>,
            "fileId": Any<String>,
          },
        ],
        "height": 830,
        "icon": Object {
          "_id": Any<String>,
          "chunks": ArrayContaining [
            ObjectContaining {
              "_id": Any<String>,
              "fileId": Any<String>,
            },
          ],
        },
        "name": "server/tests/integration/resolvers/mutations/testmap.png",
        "width": 1000,
      },
      "name": "Earth",
      "type": "Place",
      "world": Object {
        "_id": Any<String>,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`user mutations with world with authenticated user update place 1`] = `
Object {
  "data": Object {
    "updatePlace": Object {
      "_id": Any<String>,
      "mapImage": Object {
        "_id": Any<String>,
        "chunks": ArrayContaining [
          ObjectContaining {
            "_id": Any<String>,
            "fileId": Any<String>,
          },
        ],
        "height": 830,
        "icon": Object {
          "_id": Any<String>,
          "chunks": ArrayContaining [
            ObjectContaining {
              "_id": Any<String>,
              "fileId": Any<String>,
            },
          ],
        },
        "name": "server/tests/integration/resolvers/mutations/testmap.png",
        "width": 1000,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`user mutations with world with authenticated user update type 1`] = `
Object {
  "data": Object {
    "updateWiki": Object {
      "_id": Any<String>,
      "canWrite": true,
      "content": null,
      "coverImage": null,
      "name": "Earth",
      "type": "Article",
      "world": Object {
        "_id": Any<String>,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`user mutations with world with authenticated user update wiki just content 1`] = `
Object {
  "data": Object {
    "updateWiki": Object {
      "_id": Any<String>,
      "canWrite": true,
      "content": Any<String>,
      "coverImage": null,
      "name": "Earth",
      "type": "Place",
      "world": Object {
        "_id": Any<String>,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`user mutations with world with authenticated user update wiki just name 1`] = `
Object {
  "data": Object {
    "updateWiki": Object {
      "_id": Any<String>,
      "canWrite": true,
      "content": null,
      "coverImage": null,
      "name": "new name",
      "type": "Place",
      "world": Object {
        "_id": Any<String>,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
